--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="main">
         <div class="calculator">
-            <div class="display"></div>
+            <div class="display">342356</div>
             <div class="buttons">
                 <div class="button">7</div>
                 <div class="button">8</div>
@@ -25,7 +25,7 @@
                 <div class="button">3</div>
                 <div class="button">*</div>
                 <div class="button">0</div>
-                <div class="button">.</div>
+                <div class="button">C</div>
                 <div class="button">=</div>
                 <div class="button">/</div>
             </div>
