tommorow will change all this problems

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <body>
         <div class="main">
         <div class="calculator">
-            <div class="display">342356</div>
+            <div class="display">0</div>
             <div class="buttons">
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div class="button">+</div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div class="button">-</div>
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div class="button">*</div>
-                <div class="button">0</div>
-                <div class="button">C</div>
-                <div class="button">=</div>
-                <div class="button">/</div>
+                <div class="button" value="7" type="number">7</div>
+                <div class="button" value="8" type="number">8</div>
+                <div class="button" value="9" type="number">9</div>
+                <div class="button" value="+" type="operator">+</div>
+                <div class="button" value="4" type="number">4</div>
+                <div class="button" value="5" type="number">5</div>
+                <div class="button" value="6" type="number">6</div>
+                <div class="button" value="-" type="operator">-</div>
+                <div class="button" value="1" type="number">1</div>
+                <div class="button" value="2" type="number">2</div>
+                <div class="button" value="3" type="number">3</div>
+                <div class="button" value="*" type="operator">*</div>
+                <div class="button" value="0" type="number">0</div>
+                <div class="button" value="C" type="clear">C</div>
+                <div class="button" value="=" type="operator">=</div>
+                <div class="button" value="/" type="operator">/</div>
             </div>
         </div>
     </div>
