--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="button" value="*" type="operator">*</div>
                 <div class="button" value="0" type="number">0</div>
                 <div class="button" value="C" type="clear">C</div>
-                <div class="button" value="=" type="operator">=</div>
+                <div class="button" value="=">=</div>
                 <div class="button" value="/" type="operator">/</div>
             </div>
         </div>
